# todo-fastapi

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: .gitkeep
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: tasks.py
app/core/: config.py  database.py  security.py
app/models/: task.py
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: task_service.py
app/tests/: conftest.py  test_e2e.py  test_integration.py  test_unit.py
app/utils/: helpers.py
