[project]
name = "todo-fastapi"
version = "0.1.0"
description = "Professional FastAPI To-Do API with clean architecture"
readme = "README.md"
requires-python = ">=3.11"

# ── Runtime dependencies ──────────────────────────────────────────────────── #
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",   # [standard] adds websockets + httptools
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",    # reads settings from .env
]

# ── Dev / test dependencies  (uv add --dev ...) ───────────────────────────── #
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",               # required by FastAPI TestClient
    "ruff>=0.4.0",
]

# ── Build system  ─────────────────────────────────────────────────────────── #
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────── #
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Rule sets:
#   E/W  = pycodestyle errors/warnings
#   F    = Pyflakes (undefined names, unused imports)
#   I    = isort (import ordering)
#   UP   = pyupgrade (modern Python syntax)
#   B    = flake8-bugbear (common bugs)
#   SIM  = flake8-simplify (simplifiable code)
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

ignore = [
    # FastAPI uses Depends() as a default argument — this triggers B008.
    # It's intentional in FastAPI, so we ignore it.
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]  # treat `app` as first-party for import sorting

# ── Pytest ────────────────────────────────────────────────────────────────── #
[tool.pytest.ini_options]
# Where pytest looks for tests
testpaths = ["app/tests"]

# Extra options:
#   -v           verbose output (show each test name)
#   --cov=app    measure coverage for the `app` package
#   --cov-report=term-missing  show which lines are NOT covered in the terminal
addopts = "-v --cov=app --cov-report=term-missing"

# Add the project root to sys.path so `from app.xxx import ...` works
pythonpath = ["."]

# ── Coverage ─────────────────────────────────────────────────────────────── #
[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "app/core/security.py",  # placeholder, no real code yet
]

[tool.coverage.report]
show_missing = true
skip_covered = false
